--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome!
-description: a site to explain my open-source projects on Github.com
+title: Welcome!  Gnome Yamaha Receiver Control (Gyrc)
+description: a journal for my projects on GitHub
