--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome!  Gnome Yamaha Receiver Control (Gyrc)
+title: Welcome!  Gnome ------- Receiver Control (Gyrc)
 description: a journal for my projects on GitHub
